--- a/views/preachers/edit.ejs
+++ b/views/preachers/edit.ejs
@@ -19,7 +19,7 @@
                         <%= success %>
                     </div>
                 <% } %>
-                    <form action="/preachers/<%= preacher._id %>?_method=PUT" method="POST" id="form">
+                    <form action="/preachers/<%= preacher._id %>?_method=PUT" method="POST" id="form4">
                         
                         <div class="form-floating mb-3">
                        
@@ -38,12 +38,11 @@
             
         </div>
     </div>
-</div>
-</div>
+
 
 <script src="/script.js"></script>
 <script>
-    document.getElementById("form").addEventListener("submit", function(){
+    document.getElementById("form4").addEventListener("submit", function(){
         document.getElementById("send").setAttribute("disabled", "disabled");
         document.getElementById("send").innerText = `Edytowanie...`;
     })
