--- a/views/territories/search.ejs
+++ b/views/territories/search.ejs
@@ -29,6 +29,9 @@
                                 <li>
                                     <a class="dropdown-item" id="preacher">Głosiciel</a>
                                 </li>
+                                <li>
+                                    <a class="dropdown-item" id="kind">Rodzaj terenu</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -83,7 +86,20 @@
                                     </div>
                                 </form>
                         </div>
-                   
+                        <div id="kindSearch">
+                            <br>
+                                <form action="/territories/search" method="get">
+                                    <div class="input-group mb-3">
+                                        <select name="kind" class="form-select">
+                                            <option value="<%= param %>"><%= param %></option>
+                                            <option value="city">Teren miejski</option>
+                                            <option value="village">Teren wiejski</option>
+                                            <option value="market">Teren handlowy</option>
+                                        </select>
+                                        <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
+                                    </div>
+                                </form>
+                        </div>
                     
                 </div>
                 
@@ -106,7 +122,7 @@
                 <% for(let i=territories.length-1;i>=0;i--){ %>
                     
                     <div class="col-lg-6 col-md-12">
-                            <div class="card">
+                            <div class="card <%= territories[i].kind %>">
                                 <div class="card-title text-center" id="name">
                                     <br>
                                     Karta terenu nr <%= territories[i].number %>
@@ -162,6 +178,7 @@
                                             </strong></p>
                                         <% } %>
                                         <div class="d-inline">
+                                            <a href="/territories/<%= territories[i]._id %>" class="btn btn-success">Zobacz historię</a>
                                                 <a href="/territories/<%= territories[i]._id %>/edit" class="btn btn-primary">Edytuj</a>
                                                 <a href="/territories/<%= territories[i]._id %>/delete" class="btn btn-danger">Usuń</a>
                                             </div>
@@ -178,7 +195,7 @@
         <% } %>
     </div>      
     <script>
-        let preacherButton = document.getElementById("preacher");
+         let preacherButton = document.getElementById("preacher");
         let cityButton = document.getElementById("city");
         let streetButton = document.getElementById("street");
         let numberButton = document.getElementById("number");
@@ -186,11 +203,14 @@
         let citySearch = document.getElementById("citySearch");
         let streetSearch = document.getElementById("streetSearch");
         let numberSearch = document.getElementById("numberSearch");
+        let kindButton = document.getElementById("kind");
+        let kindSearch = document.getElementById("kindSearch");
 
         preacherSearch.style.display = "none";
         citySearch.style.display = "none";
         streetSearch.style.display = "none";
         numberSearch.style.display = "none";
+        kindSearch.style.display = "none";
         
 
         cityButton.addEventListener("click", function(){
@@ -198,11 +218,13 @@
             citySearch.style.display = "block";
             streetSearch.style.display = "none";
             numberSearch.style.display = "none";
+            kindSearch.style.display = "none";
         })
         preacherButton.addEventListener("click", function(){
             preacherSearch.style.display = "block";
             citySearch.style.display = "none";
             streetSearch.style.display = "none";
+            kindSearch.style.display = "none";
             numberSearch.style.display = "none";
         })
         streetButton.addEventListener("click", function(){
@@ -210,12 +232,21 @@
             citySearch.style.display = "none";
             streetSearch.style.display = "block";
             numberSearch.style.display = "none";
+            kindSearch.style.display = "none";
         })
         numberButton.addEventListener("click", function(){
             preacherSearch.style.display = "none";
             citySearch.style.display = "none";
             streetSearch.style.display = "none";
             numberSearch.style.display = "block";
+            kindSearch.style.display = "none";
+        })
+        kindButton.addEventListener("click", function(){
+                citySearch.style.display = "none";
+                streetSearch.style.display = "none";
+                numberSearch.style.display = "none";
+                kindSearch.style.display = "block";
+                preacherSearch.style.display = "none";
         })
     </script>
 
