--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,9 @@
                             <li>
                                 <a class="dropdown-item" id="number">Nr terenu</a>
                             </li>
+                            <li>
+                                <a class="dropdown-item" id="kind">Rodzaj terenu</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -64,6 +67,19 @@
                             </div>
                         </form>
                 </div>
+                <div id="kindSearch">
+                    <br>
+                        <form action="/territories/available/search" method="get">
+                            <div class="input-group mb-3">
+                                <select name="kind" class="form-select">
+                                    <option value="city">Teren miejski</option>
+                                    <option value="village">Teren wiejski</option>
+                                    <option value="market">Teren handlowy</option>
+                                </select>
+                                <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
+                            </div>
+                        </form>
+                </div>
                
             </div>
             
@@ -82,7 +98,7 @@
                 <% for(let i=territories.length-1;i>=0;i--){ %>
                     <% if(typeof territories[i].preacher === 'undefined'){ %>
                         <div class="col-lg-4 col-md-6 col-sm-12" style="margin-top: 8px;">
-                                <div class="card">
+                                <div class="card <%= territories[i].kind %>">
                                     <div class="card-title text-center" id="name">
                                         <br>
                                         Karta terenu nr <%= territories[i].number %>
@@ -90,6 +106,7 @@
                                         <div class="card-body">
                                            
                                             <p class="info">Miejscowość: <strong><%= territories[i].city %></strong></p>
+                                            <p class="info">Rodzaj: <strong><%= territories[i].kind %></strong></p>
                                             <p class="info">Ulica: 
                                                 <strong><%= territories[i].street %> 
                                                     <% if(typeof territories[i].beginNumber !== 'undefined'){ %>
@@ -123,6 +140,7 @@
                                             
                                             <p class="info"><strong>Teren oznaczony jako <span class="text-success">wolny</span></strong></p>
                                             <div class="d-inline">
+                                                <a href="/territories/<%= territories[i]._id %>" class="btn btn-success">Zobacz historię</a>
                                                 <a href="/territories/<%= territories[i]._id %>/edit" class="btn btn-primary">Edytuj</a>
                                                 <a href="/territories/<%= territories[i]._id %>/delete" class="btn btn-danger">Usuń</a>
                                             </div>
@@ -145,27 +163,39 @@
             let citySearch = document.getElementById("citySearch");
             let streetSearch = document.getElementById("streetSearch");
             let numberSearch = document.getElementById("numberSearch");
+            let kindButton = document.getElementById("kind");
+            let kindSearch = document.getElementById("kindSearch");
     
             citySearch.style.display = "none";
             streetSearch.style.display = "none";
             numberSearch.style.display = "none";
+            kindSearch.style.display = "none";
             
     
             cityButton.addEventListener("click", function(){
                 citySearch.style.display = "block";
                 streetSearch.style.display = "none";
                 numberSearch.style.display = "none";
+                kindSearch.style.display = "none";
             })
         
             streetButton.addEventListener("click", function(){
                 citySearch.style.display = "none";
                 streetSearch.style.display = "block";
                 numberSearch.style.display = "none";
+                kindSearch.style.display = "none";
             })
             numberButton.addEventListener("click", function(){
                 citySearch.style.display = "none";
                 streetSearch.style.display = "none";
                 numberSearch.style.display = "block";
+                kindSearch.style.display = "none";
+            })
+            kindButton.addEventListener("click", function(){
+                citySearch.style.display = "none";
+                streetSearch.style.display = "none";
+                numberSearch.style.display = "none";
+                kindSearch.style.display = "block";
             })
         </script>
     
