--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,25 +1,23 @@
 <%- include ("partials/headera") %> 
-                <div class="col-lg-6 col-md-12" id="form">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-8 col-md-12" style="margin-top: 20%">
-                            <div id="form1">
-                                <a href="/territories/available">
-                                    <i class="fas fa-arrow-left"></i>
-                                    Wróć do strony głównej
-                                </a>
-                                <h1 class="login"> Zaloguj się do panelu</h1>
-                                <% if(error.length > 0){ %>
-                                    <div class="alert alert-danger" role="alert">
-                                        <%= error %>
-                                    </div>
-                                <% } %>
-                                <% if(success.length > 0){ %>
-                                    <div class="alert alert-success" role="alert">
-                                        <%= success %>
-                                    </div>
-                                <% } %>
-                                <form action="/login" method="post" id="form">
-                                    <div class="form-floating mb-3">
+<div class="col-lg-6 col-md-12" id="form">
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-12" style="margin-top: 17%">
+            <div id="form1">
+                
+                <h1 class="login">Zaloguj się do panelu</h1>
+                <% if(error.length > 0){ %>
+                    <div class="alert alert-danger" role="alert">
+                        <%= error %>
+                    </div>
+                <% } %>
+                <% if(success.length > 0){ %>
+                    <div class="alert alert-success" role="alert">
+                        <%= success %>
+                    </div>
+                <% } %>
+                    
+                        <form action="/login" method="post" id="form4">
+                            <div class="form-floating mb-3">
                        
                                         <input type="text" class="form-control" autocomplete="off" name="username" id="username" placeholder="h" aria-label="Hasło" aria-describedby="basic-addon1">
                                         <label for="username" class="username">
@@ -40,26 +38,25 @@
                                         
                                     </div>
                                     <input type="submit" value="Zaloguj się" class="btn btn-success button btn-green" id="send">
-                                   
-                                </form>
-                                
-                                
-                            </div>
-                            
-                        </div>
-                        
+
+                        </form>
                     </div>
+                            
                 </div>
+                
             </div>
         </div>
-        
-		<script src="/script.js"></script>
-        <script>
-            document.getElementById("form").addEventListener("submit", function(){
-                document.getElementById("send").setAttribute("disabled", "disabled");
-                document.getElementById("send").innerText = `Logowanie...`;
-            })
-        </script>    
-    </body>
-</html>
+   
+<script src="/script.js"></script>
+<script>
+ 
 
+    document.getElementById("form4").addEventListener("submit", function(){
+        document.getElementById("send").setAttribute("disabled", "disabled");
+        document.getElementById("send").innerText = `Logowanie...`;
+    })
+
+    
+</script>    
+</body>
+</html>
