--- a/views/preachers/index.ejs
+++ b/views/preachers/index.ejs
@@ -4,6 +4,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="text-center">Głosiciele zboru <%= currentUser.username %></h1>
+                <div class="text-center">
+                    <a href="/preachers/new" class="btn btn-success" style="margin-bottom: 15px;">Dodaj głosiciela</a>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -11,9 +14,9 @@
                 <form action="/preachers/search" method="get">
                     <div class="input-group mb-3">
                         <input type="search" class="form-control" name="search" placeholder="Wyszukaj głosiciela" aria-describedby="basic-addon2">
-                        <div class="input-group-append">
-                            <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
-                        </div>
+                       
+                        <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
+                        
                     </div>
                 </form>
             </div>
