--- a/views/territories/index.ejs
+++ b/views/territories/index.ejs
@@ -9,7 +9,7 @@
         <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <div class="dropdown">
+                        <div class="dropdown d-inline-block">
                             <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                 Wybierz kategorię wyszukiwania
                             </button>
@@ -26,8 +26,13 @@
                                 <li>
                                     <a class="dropdown-item" id="preacher">Głosiciel</a>
                                 </li>
+                                <li>
+                                    <a class="dropdown-item" id="kind">Rodzaj terenu</a>
+                                </li>
                             </ul>
-                        </div>
+                        </div> 
+                        <span style="margin: 0 15px;">lub</span>
+                        <a href="/territories/new" class="btn btn-golden">Dodaj teren</a>
                     </div>
                     
                     
@@ -35,7 +40,7 @@
                         <br>
                             <form action="/territories/search" method="get">
                                 <div class="input-group mb-3">
-                                    <input type="search" class="form-control" name="city" value="<%= param %>" placeholder="Wpisz nazwę miejscowości" aria-label="Wpisz nazwę miejscowości" aria-describedby="basic-addon2">
+                                    <input type="search" class="form-control" name="city" placeholder="Wpisz nazwę miejscowości" aria-label="Wpisz nazwę miejscowości" aria-describedby="basic-addon2">
                                     <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
                                     
                                 </div>
@@ -46,7 +51,7 @@
                         <br>
                             <form action="/territories/search" method="get">
                                 <div class="input-group mb-3">
-                                    <input type="search" class="form-control" name="street" value="<%= param %>" placeholder="Wpisz nazwę ulicy" aria-label="Wpisz nazwę ulicy" aria-describedby="basic-addon2">
+                                    <input type="search" class="form-control" name="street" placeholder="Wpisz nazwę ulicy" aria-label="Wpisz nazwę ulicy" aria-describedby="basic-addon2">
                                     
                                     <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
                                     
@@ -58,7 +63,7 @@
                         <br>
                             <form action="/territories/search" method="get">
                                 <div class="input-group mb-3">
-                                    <input type="search" class="form-control" name="number" value="<%= param %>" placeholder="Wpisz nr terenu" aria-label="Wpisz nr terenu" aria-describedby="basic-addon2">
+                                    <input type="search" class="form-control" name="number" placeholder="Wpisz nr terenu" aria-label="Wpisz nr terenu" aria-describedby="basic-addon2">
                                     <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
                                 </div>
                             </form>
@@ -67,10 +72,10 @@
                         <br>
                             <form action="/territories/search" method="get">
                                 <div class="input-group mb-3">
-                                    <select class="form-control" name="preacher" aria-describedby="basic-addon2" style="font-family: 'Nunito', sans-serif;
+                                    <select class="form-control" name="preacher" aria-describedby="basic-addon2" style="font-family: 'Montserrat', sans-serif;
                                    
                                     color: #28a745">
-                                        <option value="" style="color: black;">Wybierz głosiciela (aktualnie wybrany - <%= param %>)</option>
+                                        <option value="" style="color: black;">Wybierz głosiciela</option>
                                         <% for(let i=0; i<preachers.length;i++){ %>
                                             <option value="<%= preachers[i]._id %>" style="color:black"><%= preachers[i].name %></option>
                                         <% } %>
@@ -81,7 +86,19 @@
                                 </div>
                             </form>
                     </div>
-               
+                    <div id="kindSearch">
+                        <br>
+                            <form action="/territories/search" method="get">
+                                <div class="input-group mb-3">
+                                    <select name="kind" class="form-select">
+                                        <option value="city">Teren miejski</option>
+                                        <option value="village">Teren wiejski</option>
+                                        <option value="market">Teren handlowy</option>
+                                    </select>
+                                    <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
+                                </div>
+                            </form>
+                    </div>
                 </div>
                 
             </div>
@@ -100,7 +117,7 @@
                 <% for(let i=territories.length-1;i>=0;i--){ %>
                     
                     <div class="col-lg-4 col-md-6 col-sm-12" style="margin-top: 8px;">
-                            <div class="card">
+                            <div class="card <%= territories[i].kind %>">
                                 <div class="card-title text-center" id="name">
                                     <br>
                                     Karta terenu nr <%= territories[i].number %>
@@ -157,6 +174,7 @@
                                             </strong></p>
                                         <% } %>
                                         <div class="d-inline">
+                                            <a href="/territories/<%= territories[i]._id %>" class="btn btn-success">Zobacz historię</a>
                                                 <a href="/territories/<%= territories[i]._id %>/edit" class="btn btn-primary">Edytuj</a>
                                                 <a href="/territories/<%= territories[i]._id %>/delete" class="btn btn-danger">Usuń</a>
                                             </div>
@@ -164,10 +182,7 @@
                                     </div>
                                 </div>
                             </div>
-                       
-                                
-                            
-            
+ 
                 <% } %>
             </div>
         <% } %>
@@ -181,11 +196,14 @@
         let citySearch = document.getElementById("citySearch");
         let streetSearch = document.getElementById("streetSearch");
         let numberSearch = document.getElementById("numberSearch");
+        let kindButton = document.getElementById("kind");
+        let kindSearch = document.getElementById("kindSearch");
 
         preacherSearch.style.display = "none";
         citySearch.style.display = "none";
         streetSearch.style.display = "none";
         numberSearch.style.display = "none";
+        kindSearch.style.display = "none";
         
 
         cityButton.addEventListener("click", function(){
@@ -193,11 +211,13 @@
             citySearch.style.display = "block";
             streetSearch.style.display = "none";
             numberSearch.style.display = "none";
+            kindSearch.style.display = "none";
         })
         preacherButton.addEventListener("click", function(){
             preacherSearch.style.display = "block";
             citySearch.style.display = "none";
             streetSearch.style.display = "none";
+            kindSearch.style.display = "none";
             numberSearch.style.display = "none";
         })
         streetButton.addEventListener("click", function(){
@@ -205,12 +225,21 @@
             citySearch.style.display = "none";
             streetSearch.style.display = "block";
             numberSearch.style.display = "none";
+            kindSearch.style.display = "none";
         })
         numberButton.addEventListener("click", function(){
             preacherSearch.style.display = "none";
             citySearch.style.display = "none";
             streetSearch.style.display = "none";
             numberSearch.style.display = "block";
+            kindSearch.style.display = "none";
+        })
+        kindButton.addEventListener("click", function(){
+                citySearch.style.display = "none";
+                streetSearch.style.display = "none";
+                numberSearch.style.display = "none";
+                kindSearch.style.display = "block";
+                preacherSearch.style.display = "none";
         })
     </script>
 
