--- a/views/preachers/index.ejs
+++ b/views/preachers/index.ejs
@@ -34,8 +34,8 @@
             <div class="row">
                 <% for(let i=preachers.length-1; i>=0;i--){ %>
                     <div class="col-lg-12">
-                                <span class="info float-left"><%= preachers[i].name %></span>
-                                <div class="d-inline float-right">
+                                <span class="info float-start"><%= preachers[i].name %></span>
+                                <div class="d-inline float-end">
                                     <a href="/preachers/<%= preachers[i]._id %>/edit" class="btn btn-primary">Edytuj</a>
                                     <a href="/preachers/<%= preachers[i]._id %>/delete" class="btn btn-danger">Usuń</a>
                                 </div>
