New color of territories cards and some sorting

--- a/public/style.css
+++ b/public/style.css
@@ -10,11 +10,11 @@ body {
     font-weight: 400;
 }
 .card.city {
-    background: #fad6a5;
+    background: #f6edd9;
 }
 
 .card.village {
-    background: lightblue;
+    background: #e1f1ff;
 }
 
 .card.market {
