--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,54 +95,54 @@
             </div>
         <% } else { %>
             <div class="row">
-                <% for(let i=territories.length-1;i>=0;i--){ %>
-                    <% if(typeof territories[i].preacher === 'undefined'){ %>
+                <% territories.forEach((territory) => { %>
+                    <% if(typeof territory.preacher === 'undefined'){ %>
                         <div class="col-lg-4 col-md-6 col-sm-12" style="margin-top: 8px;">
-                                <div class="card <%= territories[i].kind %>">
+                                <div class="card <%= territory.kind %>">
                                     <div class="card-title text-center" id="name">
                                         <br>
-                                        Karta terenu nr <%= territories[i].number %>
+                                        Karta terenu nr <%= territory.number %>
                                     </div>
                                         <div class="card-body">
                                            
-                                            <p class="info">Miejscowość: <strong><%= territories[i].city %></strong></p>
-                                            <p class="info">Rodzaj: <strong><%= territories[i].kind %></strong></p>
+                                            <p class="info">Miejscowość: <strong><%= territory.city %></strong></p>
+                                            <p class="info">Rodzaj: <strong><%= territory.kind %></strong></p>
                                             <p class="info">Ulica: 
-                                                <strong><%= territories[i].street %> 
-                                                    <% if(typeof territories[i].beginNumber !== 'undefined'){ %>
-                                                        <%= territories[i].beginNumber %> 
-                                                        <% if(typeof territories[i].endNumber !== 'undefined'){ %>
-                                                            - <%= territories[i].endNumber %>
+                                                <strong><%= territory.street %> 
+                                                    <% if(typeof territory.beginNumber !== 'undefined'){ %>
+                                                        <%= territory.beginNumber %> 
+                                                        <% if(typeof territory.endNumber !== 'undefined'){ %>
+                                                            - <%= territory.endNumber %>
                                                         <% } %>
                                                     <% } %>
                                                 </strong>
                                             </p>
-                                            <% if(typeof territories[i].description !== 'undefined' && territories[i].description !== ''){ %>
-                                                <p class="info">Opis: <strong><%= territories[i].description %></strong></p>
+                                            <% if(typeof territory.description !== 'undefined' && territory.description !== ''){ %>
+                                                <p class="info">Opis: <strong><%= territory.description %></strong></p>
                                             <% } %>
                                             
-                                            <% if(typeof territories[i].forbidden !== 'undefined' && territories[i].forbidden !== ''){ %>
-                                                <p class="info">Nie zachodzić: <strong><%= territories[i].forbidden %></strong></p>
+                                            <% if(typeof territory.forbidden !== 'undefined' && territory.forbidden !== ''){ %>
+                                                <p class="info">Nie zachodzić: <strong><%= territory.forbidden %></strong></p>
                                             <% } %>
-                                            <p class="info">Ostatnio opracowane: <strong><%= territories[i].lastWorked %></strong></p>
+                                            <p class="info">Ostatnio opracowane: <strong><%= territory.lastWorked %></strong></p>
                                             <p class="info"><strong>Teren nie był opracowywany od 
-                                                    <% if(Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) < 31){ %>
-                                                        <%= Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) %> dni
-                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) < 62){ %>
-                                                        <span class="text-primary"><%= Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) %></span> dni
-                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) < 93){ %>
-                                                        <span class="text-orange" style="color: #fd7e14;"><%= Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) %></span> dni
-                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) >= 124){ %>
-                                                        <span class="text-danger"><%= Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) %></span> dni
+                                                    <% if(Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) < 31){ %>
+                                                        <%= Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) %> dni
+                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) < 62){ %>
+                                                        <span class="text-primary"><%= Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) %></span> dni
+                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) < 93){ %>
+                                                        <span class="text-orange" style="color: #fd7e14;"><%= Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) %></span> dni
+                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) >= 124){ %>
+                                                        <span class="text-danger"><%= Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) %></span> dni
                                                         
                                                     <% } %>
                                             </strong></p>
                                             
                                             <p class="info"><strong>Teren oznaczony jako <span class="text-success">wolny</span></strong></p>
                                             <div class="d-inline">
-                                                <a href="/territories/<%= territories[i]._id %>" class="btn btn-success">Zobacz historię</a>
-                                                <a href="/territories/<%= territories[i]._id %>/edit" class="btn btn-primary">Edytuj</a>
-                                                <a href="/territories/<%= territories[i]._id %>/delete" class="btn btn-danger">Usuń</a>
+                                                <a href="/territories/<%= territory._id %>" class="btn btn-success">Zobacz historię</a>
+                                                <a href="/territories/<%= territory._id %>/edit" class="btn btn-primary">Edytuj</a>
+                                                <a href="/territories/<%= territory._id %>/delete" class="btn btn-danger">Usuń</a>
                                             </div>
                                         </div>
                                     </div>
@@ -152,7 +152,7 @@
                     
                             
             
-                <% } %>
+                <% }) %>
             </div>
         <% } %>
 
