--- a/views/territories/availableSearch.ejs
+++ b/views/territories/availableSearch.ejs
@@ -99,68 +99,68 @@
            
         <% } else { %>
             <div class="row">
-                <% for(let i=territories.length-1;i>=0;i--){ %>
+                <% territories.forEach((territory) => { %>
                     
                     <div class="col-lg-6 col-md-12">
-                            <div class="card <%= territories[i].kind %>">
+                            <div class="card <%= territory.kind %>">
                                 <div class="card-title text-center" id="name">
                                     <br>
-                                    Karta terenu nr <%= territories[i].number %>
+                                    Karta terenu nr <%= territory.number %>
                                 </div>
                                     <div class="card-body">
                                        
-                                        <p class="info">Miejscowość: <strong><%= territories[i].city %></strong></p>
+                                        <p class="info">Miejscowość: <strong><%= territory.city %></strong></p>
                                         <p class="info">Ulica: 
-                                            <strong><%= territories[i].street %> 
-                                                <% if(typeof territories[i].beginNumber !== 'undefined'){ %>
-                                                    <%= territories[i].beginNumber %> 
-                                                    <% if(typeof territories[i].endNumber !== 'undefined'){ %>
-                                                        - <%= territories[i].endNumber %>
+                                            <strong><%= territory.street %> 
+                                                <% if(typeof territory.beginNumber !== 'undefined'){ %>
+                                                    <%= territory.beginNumber %> 
+                                                    <% if(typeof territory.endNumber !== 'undefined'){ %>
+                                                        - <%= territory.endNumber %>
                                                     <% } %>
                                                 <% } %>
                                             </strong>
                                         </p>
-                                        <% if(typeof territories[i].description !== 'undefined' && territories[i].description !== ''){ %>
-                                            <p class="info">Opis: <strong><%= territories[i].description %></strong></p>
+                                        <% if(typeof territory.description !== 'undefined' && territory.description !== ''){ %>
+                                            <p class="info">Opis: <strong><%= territory.description %></strong></p>
                                         <% } %>
                                         
-                                        <% if(typeof territories[i].forbidden !== 'undefined' && territories[i].forbidden !== ''){ %>
-                                            <p class="info">Nie zachodzić: <strong><%= territories[i].forbidden %></strong></p>
+                                        <% if(typeof territory.forbidden !== 'undefined' && territory.forbidden !== ''){ %>
+                                            <p class="info">Nie zachodzić: <strong><%= territory.forbidden %></strong></p>
                                         <% } %>
-                                        <p class="info">Ostatnio opracowane: <strong><%= territories[i].lastWorked %></strong></p>
-                                        <% if(typeof territories[i].preacher !== 'undefined'){ %>
-                                            <p class="info">Głosiciel: <strong><%= territories[i].preacher.name %></strong></p>
-                                            <p class="info">Pobrany: <strong><%= territories[i].taken %></strong></p>
-                                            <p class="info"><strong><%= territories[i].preacher.name %> ma ten teren
-                                                <% if(Math.round(Math.abs(new Date() - new Date(territories[i].taken)) / 86400000) < 90){ %>
-                                                    <%= Math.round(Math.abs(new Date() - new Date(territories[i].taken)) / 86400000) %> dni
-                                                <% } else if(Math.round(Math.abs(new Date() - new Date(territories[i].taken)) / 86400000) < 120){ %>
-                                                    <span class="text-primary"><%= Math.round(Math.abs(new Date() - new Date(territories[i].taken)) / 86400000) %></span> dni
-                                                <% } else if(Math.round(Math.abs(new Date() - new Date(territories[i].taken)) / 86400000) >= 120){ %>
-                                                    <span class="text-danger"><%= Math.round(Math.abs(new Date() - new Date(territories[i].taken)) / 86400000) %></span> dni
+                                        <p class="info">Ostatnio opracowane: <strong><%= territory.lastWorked %></strong></p>
+                                        <% if(typeof territory.preacher !== 'undefined'){ %>
+                                            <p class="info">Głosiciel: <strong><%= territory.preacher.name %></strong></p>
+                                            <p class="info">Pobrany: <strong><%= territory.taken %></strong></p>
+                                            <p class="info"><strong><%= territory.preacher.name %> ma ten teren
+                                                <% if(Math.round(Math.abs(new Date() - new Date(territory.taken)) / 86400000) < 90){ %>
+                                                    <%= Math.round(Math.abs(new Date() - new Date(territory.taken)) / 86400000) %> dni
+                                                <% } else if(Math.round(Math.abs(new Date() - new Date(territory.taken)) / 86400000) < 120){ %>
+                                                    <span class="text-primary"><%= Math.round(Math.abs(new Date() - new Date(territory.taken)) / 86400000) %></span> dni
+                                                <% } else if(Math.round(Math.abs(new Date() - new Date(territory.taken)) / 86400000) >= 120){ %>
+                                                    <span class="text-danger"><%= Math.round(Math.abs(new Date() - new Date(territory.taken)) / 86400000) %></span> dni
                                                     <br>
                                                     <br>
-                                                    <span class="text-danger"><strong>Przypomnij <%= territories[i].preacher.name %> o oddaniu terenu</strong> </span>
+                                                    <span class="text-danger"><strong>Przypomnij <%= territory.preacher.name %> o oddaniu terenu</strong> </span>
                                                 <% } %>
                                             </strong></p>
                                         <% } else { %>
                                             <p class="info"><strong>Teren oznaczony jako <span class="text-success">wolny</span></strong> </p>
                                             <p class="info"><strong>Teren nie był opracowywany od 
-                                                    <% if(Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) < 31){ %>
-                                                        <%= Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) %> dni
-                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) < 62){ %>
-                                                        <span class="text-primary"><%= Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) %></span> dni
-                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) < 93){ %>
-                                                        <span class="text-orange" style="color: #fd7e14;"><%= Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) %></span> dni
-                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) >= 124){ %>
-                                                        <span class="text-danger"><%= Math.round(Math.abs(new Date() - new Date(territories[i].lastWorked)) / 86400000) %></span> dni
+                                                    <% if(Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) < 31){ %>
+                                                        <%= Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) %> dni
+                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) < 62){ %>
+                                                        <span class="text-primary"><%= Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) %></span> dni
+                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) < 93){ %>
+                                                        <span class="text-orange" style="color: #fd7e14;"><%= Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) %></span> dni
+                                                    <% } else if(Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) >= 124){ %>
+                                                        <span class="text-danger"><%= Math.round(Math.abs(new Date() - new Date(territory.lastWorked)) / 86400000) %></span> dni
                                                     <% } %>
                                             </strong></p>
                                         <% } %>
                                         <div class="d-inline">
-                                            <a href="/territories/<%= territories[i]._id %>" class="btn btn-success">Zobacz historię</a>
-                                                <a href="/territories/<%= territories[i]._id %>/edit" class="btn btn-primary">Edytuj</a>
-                                                <a href="/territories/<%= territories[i]._id %>/delete" class="btn btn-danger">Usuń</a>
+                                            <a href="/territories/<%= territory._id %>" class="btn btn-success">Zobacz historię</a>
+                                                <a href="/territories/<%= territory._id %>/edit" class="btn btn-primary">Edytuj</a>
+                                                <a href="/territories/<%= territory._id %>/delete" class="btn btn-danger">Usuń</a>
                                             </div>
                                         
                                     </div>
@@ -170,7 +170,7 @@
                                 
                             
             
-                <% } %>
+                <% }) %>
             </div>
         <% } %>
     </div>      
